--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Pagos</a>
+          <a class="nav-link" href="/servicio/lista_servicios/">Pagos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Actividades</a>
