add en los templates

--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -21,10 +21,10 @@
           <a class="nav-link" href="/servicio/lista_servicios/">Pagos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Actividades</a>
+          <a class="nav-link" href="/actividades/lista-actividades/">Actividades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Reservas</a>
+          <a class="nav-link" href="#">Formulario de ingresos</a>
         </li>
           <li class="nav-item">
           <a class="nav-link" href="#">Mantenimientos</a>
