--- a/templates/servicio/ListaServicios.html
+++ b/templates/servicio/ListaServicios.html
@@ -4,15 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Lista de servicios</h1>
-    <ul>
-        {% for e in object_list %}
-            <li>{{e}}</li>
-        {% endfor  %}
-    </ul>
+    <h1 style="text-align: center;">Pago de servicios y facturas</h1>
+    {% for e in object_list %}
+    
+    <div class="row" style="display:inline;">
+        <div class="col-sm-2">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">{{e.servicio}}</h5>
+                    <li class="list-group-item">monto: {{e.monto}}</li>
+                    <li class="list-group-item">mora: {{e.mora}}</li>
+                    <li class="list-group-item">monto a pagar: {{e.monto_total}}</li>
+                    <a href="#" class="btn btn-primary">Pagar</a>
+                </div>
+            </div>
+        </div>
+           
+    {% endfor  %}
+    
 </body>
 
 </html>
