--- a/templates/administracion/iniciar_sesion.html
+++ b/templates/administracion/iniciar_sesion.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-   <div class="mb-3 row">
+   <div class="mb-3 mt-4 row">
     <label class="col-sm-2 col-form-label">Email</label>
     <div class="col-sm-10">
       <input type="text"  class="form-control"  placeholder="Ingrese su usuario" name="username" >
