--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Registrar un nuevo usuario</h1>
+
+    <form method="post">{% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Registrar</button>
+    </form>
 </body>
 </html>
