--- a/templates/administracion/iniciar_sesion.html
+++ b/templates/administracion/iniciar_sesion.html
@@ -10,20 +10,7 @@
 
 </head>
 <body>
-   <div class="mb-3 mt-4 row">
-    <label class="col-sm-2 col-form-label">Email</label>
-    <div class="col-sm-10">
-      <input type="text"  class="form-control"  placeholder="Ingrese su usuario" name="username" >
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" placeholder="Ingrese su contraseña" name="password">
-    </div>
-  </div>
-    <div class="col-auto">
-    <button type="submit" class="btn btn-primary mb-3">Iniciar sesion</button>
-  </div>
+    <h1>Bienvenido al panel de usuario</h1>
+    
 </body>
 </html>
