--- a/templates/administracion/panel.html
+++ b/templates/administracion/panel.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <h1>Bienvenido al panel de usuario</h1>
-    
+    <h3>Bienvenido: {{user}}</h3>
+    <ul>
+        <li>
+            <a href="{% url 'users:user-logout' %}">Cerrar Sesion</a>
+        </li>
+        <li><a href="">Actualizar datos</a></li>
+    </ul>
 </body>
 </html>
