--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -30,8 +30,11 @@
           <a class="nav-link" href="#">Mantenimientos</a>
         </li>
       </ul>
+
+      <p class="mt-3 mx-3">Hola: {{user}} </p>
       <span class="navbar-text">
-          <a class="nav-link" href="/iniciar_sesion">Iniciar sesión</a>
+          <button type="button" class="btn btn-info"><a class="nav-link" href="/iniciar_sesion">Panel de control</a></button>
+          
       </span>
     </div>
   </div>
