--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/actividades/lista-actividades/">Actividades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Formulario de ingresos</a>
+          <a class="nav-link" href="#" >Visitas</a>
         </li>
           <li class="nav-item">
           <a class="nav-link" href="#">Mantenimientos</a>
