mejora en la parte visual

--- a/templates/administracion/panel.html
+++ b/templates/administracion/panel.html
@@ -16,7 +16,7 @@
         <li>
             <a href="{% url 'users:user-logout' %}">Cerrar Sesion</a>
         </li>
-        <li><a href="">Actualizar datos</a></li>
+        <li><a href="{% url 'users:user-update' %}">Actualizar datos</a></li>
     </ul>
 </body>
 </html>
