--- a/templates/servicio/ListaServicios.html
+++ b/templates/servicio/ListaServicios.html
@@ -20,7 +20,7 @@
                     <li class="list-group-item">monto: {{e.monto}}</li>
                     <li class="list-group-item">mora: {{e.mora}}</li>
                     <li class="list-group-item">monto a pagar: {{e.monto_total}}</li>
-                    <a href="/servicio/pasarella" class="btn btn-primary">Pagar</a>
+                    <a href="/servicio/pasarella" class="btn btn-primary">Pagar este servicio</a>
                 </div>
             </div>
         </div>
