--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand " href="#">Condominios Los Lirios</a>
@@ -41,3 +42,13 @@
 </nav>
 </body>
 </html>
+
+<style>
+  body {
+  height: 400px;
+  background-image: url("https://carontestudio.com/img/caronte-web-estudio-logo.png");
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position: center center;
+}
+</style>
