--- a/templates/servicio/ListaServicios.html
+++ b/templates/servicio/ListaServicios.html
@@ -18,9 +18,9 @@
                 <div class="card-body">
                     <h5 class="card-title">{{e.servicio}}</h5>
                     <li class="list-group-item">monto: {{e.monto}}</li>
-                    <li class="list-group-item">mora: {{e.mora}}</li>
-                    <li class="list-group-item">monto a pagar: {{e.monto_total}}</li>
-                    <a href="/servicio/pasarella" class="btn btn-primary">Pagar este servicio</a>
+                    <li class="list-group-item">mes: {{e.mes}}</li>
+                    <li class="list-group-item">estado: {{e.estado}}</li>
+                    <a href="/servicio/pasarella" class="btn btn-primary ">Pagar este servicio</a>
                 </div>
             </div>
         </div>
