--- a/templates/servicio/pasarella.html
+++ b/templates/servicio/pasarella.html
@@ -19,7 +19,7 @@
         <div class="form-group owner">
             <h3 class="col-4" style="text-align:justify; ">
                 <label>Monto a pagar: </label>
-                <label style="background-color: aquamarine;"> 400 soles</label>
+                <label style="background-color: aquamarine;"> </label>
             </h3>
             
         </div>
