--- a/templates/servicio/pasarella.html
+++ b/templates/servicio/pasarella.html
@@ -1,175 +1,136 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Credit Card Validation Demo</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Pago</title>
 </head>
 
 <body>
+    <h1 style="text-align: center;" class="mt-5"> Ultimo paso </h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="shadow-lg p-3 mb-5 mt-4 bg-body rounded">
+                    <div class="col-md-12">
+                        <form  class="row g-3 needs-validations" novalidate>
+                            <div class="col-md-12">
+                                <label for="numero" class="form-label">Numero de tarjeta</label>
+                                <input type="numero" name="numero" type="text" class="form-control" required>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="nombre" class="form-label">Nombre</label>
+                                <input type="nombre" name="nombre" type="text" class="form-control" required>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="apellido" class="form-label">Apellido</label>
+                                <input type="apellido" name="apellido" type="text" class="form-control" required>
+                            </div>
+                            <div class="col-md-4 mt-4">
+                                <label  for="fecha" >Mes expiración</label>
+                                <select name="mes" id="mes" class="form-select" required>
+                                    <option value="01">Enero</option>
+                                    <option value="02">Febrero </option>
+                                    <option value="03">Marzo</option>
+                                    <option value="04">Abril</option>
+                                    <option value="05">Mayo</option>
+                                    <option value="06">Junio</option>
+                                    <option value="07">Julio</option>
+                                    <option value="08">Agosto</option>
+                                    <option value="09">Septiembre</option>
+                                    <option value="10">Octubre</option>
+                                    <option value="11">Noviembre</option>
+                                    <option value="12">Deciembre</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4 mt-4">
+                                <label for="fecha">Mes expiración</label>
+                                <select name="year" id="year" class="form-select" required>
+                                    <option value="2021"> 2021</option>
+                                    <option value="2022"> 2022</option>
+                                    <option value="2023"> 2023</option>
+                                    <option value="2024"> 2024</option>
+                                    <option value="2025"> 2025</option>
+                                    <option value="2026 "> 2026</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="cvv" class="form-label">cvv</label>
+                                <input type="cvv" name="cvv" type="text" class="form-control">
+                            </div>
+                            <button type="submit" class="btn btn-warning fw-bold">Pagar</button>
+                        </form>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h3 class="mt-5">Resumen de su pago</h3>
+                <h5 class="col-md-12" style="text-align:justify; ">
+                    
+                    {% for e in pagos %}
+                     <label>Monto a pagar: S/</label> {{e.monto}}
+                     <br>
+                    <label>Mes al que pertenece: </label> {{e.mes}}
+                    <br>
+                    <label>Servicio: </label> {{e.servicio}}
+                    
+                    {% endfor %}
+                    <label style="background-color: aquamarine;"> </label>
+                </h5>
+            </div>
+        </div>
+
+    </div>
+
+
     
-<div class="row">
-    <div class="col-sm-5">
-        <h1 class="creditCardForm">Detalle del pago</h1>
-        <div class="form-group owner">
-            <h3 class="col-4" style="text-align:justify; ">
-                <label>Monto a pagar: S/</label>
-                {% for e in pagos %}
-                    {{e.monto}} 
-                {% endfor %}
-                <label style="background-color: aquamarine;"> </label>
-            </h3>
-            
-        </div>
-    </div>
-    <div class="col-sm-7">
-        <div class="creditCardForm">
-            <div class="heading">
-                <h1>Confirme su Pago</h1>
-            </div>
-            <div class="payment">
-                <form>
-                    <div class="form-group owner">
-                        <label for="owner">Nombres</label>
-                        <input type="text" class="form-control" id="owner">
-                    </div>
-                    <div class="form-group CVV">
-                        <label for="cvv">cvv</label>
-                        <input type="text" class="form-control" id="cvv">
-                    </div>
-                    <div class="form-group" id="card-number-field">
-                        <label for="cardNumber">Número tarjeta</label>
-                        <input type="number" class="form-control" id="cardNumber">
-                    </div>
-                    <div class="form-group" id="expiration-date">
-                        <label>Fecha de expiración</label>
-                        <select>
-                            <option value="01">Enero</option>
-                            <option value="02">Febrero </option>
-                            <option value="03">Marzo</option>
-                            <option value="04">Abril</option>
-                            <option value="05">Mayo</option>
-                            <option value="06">Junio</option>
-                            <option value="07">Julio</option>
-                            <option value="08">Agosto</option>
-                            <option value="09">Septiembre</option>
-                            <option value="10">Octubre</option>
-                            <option value="11">Noviembre</option>
-                            <option value="12">Deciembre</option>
-                        </select>
-                        <select>
-                            <option value="16"> 2021</option>
-                            <option value="17"> 2022</option>
-                            <option value="18"> 2023</option>
-                            <option value="19"> 2024</option>
-                            <option value="20"> 2025</option>
-                            <option value="21"> 2026</option>
-                        </select>
-                    </div>
-                    <div class="form-group" id="pay-now">
-                        <button type="submit" class="btn btn-default" id="confirm-purchase">Pagar ahora</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
 
 
-    <!-- The HTML for our form will go here -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="assets/js/jquery.payform.min.js" charset="utf-8"></script>
-    <script src="assets/js/script.js"></script>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+            (function () {
+                'use strict'
+
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.querySelectorAll('.needs-validation')
+
+                // Loop over them and prevent submission
+                Array.prototype.slice.call(forms)
+                    .forEach(function (form) {
+                        form.addEventListener('submit', function (event) {
+                            if (!form.checkValidity()) {
+                                event.preventDefault()
+                                event.stopPropagation()
+                            }
+
+                            form.classList.add('was-validated')
+                        }, false)
+                    })
+            })()
+    </script>
 </body>
 
 </html>
-
-<style>
-    .creditCardForm {
-    max-width: 700px;
-    background-color: #fff;
-    margin: 100px auto;
-    overflow: hidden;
-    padding: 25px;
-    color: #4c4e56;
-}
-.creditCardForm label {
-    width: 100%;
-    margin-bottom: 10px;
-}
-.creditCardForm .heading h1 {
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-    color: #4c4e56;
-}
-.creditCardForm .payment {
-    float: left;
-    font-size: 18px;
-    padding: 10px 25px;
-    margin-top: 20px;
-    position: relative;
-}
-.creditCardForm .payment .form-group {
-    float: left;
-    margin-bottom: 15px;
-}
-.creditCardForm .payment .form-control {
-    line-height: 40px;
-    height: auto;
-    padding: 0 16px;
-}
-.creditCardForm .owner {
-    width: 63%;
-    margin-right: 10px;
-}
-.creditCardForm .CVV {
-    width: 35%;
-}
-.creditCardForm #card-number-field {
-    width: 100%;
-}
-.creditCardForm #expiration-date {
-    width: 49%;
-}
-.creditCardForm #credit_cards {
-    width: 50%;
-    margin-top: 25px;
-    text-align: right;
-}
-.creditCardForm #pay-now {
-    width: 100%;
-    margin-top: 25px;
-}
-.creditCardForm .payment .btn {
-    width: 100%;
-    margin-top: 3px;
-    font-size: 24px;
-    background-color: #2ec4a5;
-    color: white;
-}
-.creditCardForm .payment select {
-    padding: 10px;
-    margin-right: 15px;
-}
-.transparent {
-    opacity: 0.2;
-}
-@media(max-width: 650px) {
-    .creditCardForm .owner,
-    .creditCardForm .CVV,
-    .creditCardForm #expiration-date,
-    .creditCardForm #credit_cards {
-        width: 100%;
-    }
-    .creditCardForm #credit_cards {
-        text-align: left;
-    }
-}
-</style>
