--- a/templates/administracion/panel.html
+++ b/templates/administracion/panel.html
@@ -7,16 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    
 </head>
 <body>
+    
+    <div class="container mt-5"> 
+
+    
     <h1>Bienvenido al panel de usuario</h1>
+    <p align="right">
+             <button type="button" class="btn btn-info" ><a href="/" style="text-decoration: none; color:white;">Volver
+            inicio</a></button>
+    </p>
     <h3>Bienvenido: {{user}}</h3>
-    <ul>
-        <li>
-            <a href="{% url 'users:user-logout' %}">Cerrar Sesion</a>
-        </li>
-        <li><a href="{% url 'users:user-update' %}">Actualizar datos</a></li>
+    <ul style="display: inline-flex;">
+            
+            <button type="button" class="btn btn-success"><a href="{% url 'users:user-update' %}" style="text-decoration: none; color:white">Actualizar datos</a></button>
+            <button type="button" class="btn btn-danger"><a href="{% url 'users:user-logout' %}" style="text-decoration: none; color:white;">Cerrar Sesion</a></button>
     </ul>
+    </div>
 </body>
 </html>
