--- a/templates/servicio/pasarella.html
+++ b/templates/servicio/pasarella.html
@@ -24,7 +24,7 @@
                         <form  class="row g-3 needs-validations" novalidate>
                             <div class="col-md-12">
                                 <label for="numero" class="form-label">Numero de tarjeta</label>
-                                <input type="numero" name="numero" type="text" class="form-control" required>
+                                <input type="text" name="numero" type="text" class="form-control" maxlength="16" required>
                             </div>
                             <div class="col-md-6">
                                 <label for="nombre" class="form-label">Nombre</label>
@@ -64,7 +64,7 @@
                             </div>
                             <div class="col-md-4">
                                 <label for="cvv" class="form-label">cvv</label>
-                                <input type="cvv" name="cvv" type="text" class="form-control">
+                                <input type="cvv" name="cvv" type="text" class="form-control" required maxlength="3">
                             </div>
                             <button type="submit" class="btn btn-warning fw-bold">Pagar</button>
                         </form>
