--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Acceder al sistema</h1>
-    <form action="" method="post">{% csrf_token %}
-        {{form.as_p}}
-        <button type="submit"> Iniciar sesión</button>
-    </form>
+    
+<div class="mt-5" style="margin-left: 500px; margin-top: 400;">
+
+ 
+        <h1>Acceder al sistema</h1>
+        <p align="right">
+            <button type="button" class="btn btn-info"><a href="/" style="text-decoration: none; color:white;">Volver
+                    inicio</a></button>
+        </p>
+        <form action="" method="post">{% csrf_token %}
+            {{form.as_p}}
+            <button type="submit" class="mt-2 btn btn-success"> Iniciar sesión</button>
+        </form>
+
+
+
+</div>
 </body>
 </html>
