--- a/templates/users/update.html
+++ b/templates/users/update.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <h1>Cambiar contraseña: "{{user}}</h1>
-    <form method="post">{% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Actualziar</button>
-    </form>
+<div class="mt-5" style="margin-left: 500px; margin-top: 400;">
+
+    <div class="container">
+
+
+        <h1>Cambiar contraseña: "{{user}}</h1>
+        <p align="right">
+            <button type="button" class="btn btn-info"><a href="/" style="text-decoration: none; color:white;">Volver
+                    inicio</a></button>
+        </p>
+        <form method="post">{% csrf_token %}
+            {{form.as_p}}
+            <button type="submit" class="mt-2 btn btn-success"> Actualizar</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
 
