--- a/templates/administracion/panel.html
+++ b/templates/administracion/panel.html
@@ -22,7 +22,7 @@
     <h3>Bienvenido: {{user}}</h3>
     <ul style="display: inline-flex;">
             
-            <button type="button" class="btn btn-success"><a href="{% url 'users:user-update' %}" style="text-decoration: none; color:white">Actualizar datos</a></button>
+            <button type="button" class="btn btn-success"><a href="{% url 'users:user-update' %}" style="text-decoration: none; color:white">Actualizar contraseña</a></button>
             <button type="button" class="btn btn-danger"><a href="{% url 'users:user-logout' %}" style="text-decoration: none; color:white;">Cerrar Sesion</a></button>
     </ul>
     </div>
