sistema de actualizacion con la fecha actual

--- a/templates/actividades/lista_actividades.html
+++ b/templates/actividades/lista_actividades.html
@@ -9,6 +9,10 @@
 <div class="container">
     <div class="row">
         <div class="col-6 mt-3">
+
+        <form method="GET">
+           
+        </form>
             <h1 style="text-align: center;">Lista y registro de espacios</h1>
             <div>
                 <h3>Lista de los espacios ya reservados</h3>
@@ -21,7 +25,6 @@
                         <li class="list-group-item">{{e.hora_reserva}}</li>
                         <li class="list-group-item">{{e.estado}}</li>
                         <li class="list-group-item">{{e.fecha_reserva}}</li>
-                        <li class="list-group-item mb-4">{{e.usuario}}</li>
                     </ul>
                 </div>
             </div>
