--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="/servicio/lista_servicios/">Pagos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/actividades/lista-actividades/">Actividades</a>
+          <a class="nav-link" href="/actividades/lista-actividades/Sala star">Actividades</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/visita/add/" >Visitas</a>
