--- a/templates/actividades/lista_actividades.html
+++ b/templates/actividades/lista_actividades.html
@@ -14,7 +14,7 @@
            
         </form>
             <h1 style="text-align: center;">Espacio comunitario</h1>
-            <a href="/actividades/crear-actividades/" class="btn btn-primary">Pagar este servicio</a>
+            <a href="/actividades/crear-actividades/" class="btn btn-success">Solicitar una espacio</a>
             <div>
                 <h3>Lista de los espacios ya reservados</h3>
               
