--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="/actividades/lista-actividades/Sala star">Actividades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/visita/add/" >Visitas</a>
+          <a class="nav-link" href="/visita/prueba/" >Visitas</a>
         </li>
           <li class="nav-item">
           <a class="nav-link" href="#">Mantenimientos</a>
