--- a/templates/visita/add_visitantes.html
+++ b/templates/visita/add_visitantes.html
@@ -1,33 +1,36 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
+
 <body>
+
     <div class="container" style="padding:100px 300px;">
-    
+
         <div style="text-align: center;">
             <ul class="list-group">
                 <li class="list-group-item mb-4" style="background-color: bisque; color:red;">
-                    <h2>Formulario registro de visita</h2>
+                    <h2>Formulario visitantes</h2>
                 </li>
                 <form method="POST">{% csrf_token %}
                     <h4 align="left">{{form.as_p}}</h4>
-                    <button type="submit" class="btn btn-warning fw-bold">Registrar </button>
+
+                    <button type="submit" class="btn btn-warning fw-bold">Reservar </button>
                 </form>
             </ul>
         </div>
-    
+
     </div>
+
+
 </body>
+
 </html>
-    
-   
