--- a/templates/visita/prueba.html
+++ b/templates/visita/prueba.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
-  <h1>visita</h1>
-</body>
-</html>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 mt-3">
+        <h1 style="text-align: center;">Registro de tus futuras visitas</h1>
+     
+        <div>
+
+
+        {% for e in object_list %}
+        <div class="col-12">
+
+          <div style="text-align: center;">
+            <ul class="list-group">
+              <li class="list-group-item" style="background-color: bisque; color:red;">{{e.espacio}}</li>
+              <li class="list-group-item">{{e.fecha_visita}}</li>
+              <li class="list-group-item">{{e.nro_personas}}</li>
+              <li class="list-group-item">{{e.usuario}}</li>
+              <form method="GET"> {% csrf_token %}
+                <a href="/visita/add_visitantes/{{e.id}}" class="btn btn-success">Registrar personas</a>
+              </form>
+            </ul>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+
+    </div>
+
+  </div>
+
+
+  </html>
+
+  <style>
+    div[class|="col"] {
+      border: 1px solid #ffc107;
+    }
+  </style>
