--- a/templates/actividades/lista_actividades.html
+++ b/templates/actividades/lista_actividades.html
@@ -19,12 +19,15 @@
                 <h3>Lista de los espacios ya reservados</h3>
               
             </div>
-            <center> 
+            
+            <div style="position: relative; text-align: center;">
+
+           
                 <a href="/actividades/lista-actividades/Sala star" class="btn btn-primary">Sala star</a>
                 <a href="/actividades/lista-actividades/Piscina" class="btn btn-primary">Piscina</a>
                 <a href="/actividades/lista-actividades/Área parrilla" class="btn btn-primary">Área parrilla</a>
                 <a href="/actividades/lista-actividades/Área recreativa" class="btn btn-primary">Área recreativa</a>
-            </center>
+            </div>
             {% for e in object_list %}
             <div class="col-12">
                 
