--- a/templates/actividades/lista_actividades.html
+++ b/templates/actividades/lista_actividades.html
@@ -14,7 +14,9 @@
            
         </form>
             <h1 style="text-align: center;">Espacio comunitario</h1>
-            <a href="/actividades/crear-actividades/" class="btn btn-success">Solicitar una espacio</a>
+            <h5 class="mt-5" style="text-align: right;">Para reservar un espacio presione aquí: 
+                <a href="/actividades/crear-actividades/" class="btn btn-success">Solicitar una espacio</a> 
+            </h5>
             <div>
                 <h3>Lista de los espacios ya reservados</h3>
               
