--- a/templates/visita/add_visitantes.html
+++ b/templates/visita/add_visitantes.html
@@ -21,10 +21,12 @@
                     <h2>Formulario visitantes</h2>
                 </li>
                 <form method="POST">{% csrf_token %}
-                    <h4 align="left">{{form.as_p}}</h4>
 
-                    <button type="submit" class="btn btn-warning fw-bold">Reservar </button>
+                        <h4 align="left">{{form.as_p}}</h4>
+                            </h4>                            
+                    <button type="submit" class="btn btn-warning fw-bold">Añadir</button>
                 </form>
+              
             </ul>
         </div>
 
