--- a/templates/servicio/ListaRecibos.html
+++ b/templates/servicio/ListaRecibos.html
@@ -10,47 +10,45 @@
 
 <body>
 
-    <h1 style="text-align: center;">Hola "{{user}}" Realiza el pago de tus servicios</h1>
-    
+    <h1 style="text-align: center;">Hola "{{user}}" este es tu reporte de pago</h1>
+
     <div class="container">
         <div class="row">
             <div class="col-12 mt-3">
                 <h5 class="mt-5" style="text-align: left;">
                     <a href="/" class="btn btn-primary">Ir al inicio</a>
-                    <a href="/servicio/lista_recibos/" class="btn btn-primary">Recibos cancelados</a>
                 </h5>
                 <h5 class="mt-1" style="text-align: left;">
-    
+
                 </h5>
                 <div>
-                    <h3>Lista de tus recibos pendientes</h3>
-    
+                    <h3>Lista de tus recibos Pagado</h3>
+
                 </div>
-    
+
 
                 {% for e in object_list %}
-                <div class="col-12 mt-2" >
-    
+                <div class="col-12 mt-2">
+
                     <div style="text-align: center;">
                         <ul class="list-group">
                             <li class="list-group-item" style="background-color: bisque; color:red;">{{e.servicio}}</li>
-                            <li class="list-group-item">Mes:   <b>{{e.mes}}</b></li>
+                            <li class="list-group-item">Mes: <b>{{e.mes}}</b></li>
                             <li class="list-group-item">Monto a pagar: <b>{{e.monto}}</b></li>
                             <li class="list-group-item">Estado: <b>{{e.monto}}</b></li>
-                            
+
                         </ul>
-                        <a href="/servicio/pasarella/{{e.id}}" class="btn btn-primary">Pagar este servicio</a>
+                        <a href="/servicio/pasarella/{{e.id}}" class="btn btn-primary">Imprimir recibo</a>
                     </div>
                 </div>
                 {% endfor %}
             </div>
-    
+
         </div>
-    
+
     </div>
 
-    
+
 </body>
 
 </html>
-
