mejoras en el codigo

--- a/templates/visita/lista-visitantes.html
+++ b/templates/visita/lista-visitantes.html
@@ -22,9 +22,9 @@
                         <div style="text-align: center;">
                             <ul class="list-group">
                                 <li class="list-group-item" style="background-color: bisque; color:red;"></li>
-                                <li class="list-group-item">Dni: <b>{{e.dni_visita}}</b></li>
-                                <li class="list-group-item">Nombre: <b>{{e.nombre_visita}}</b> </li>
-                                <li class="list-group-item">Apellido: <b>{{e.apellido_visita}}</b> </li>
+                                <li class="list-group-item">Dni: {{e.dni_visita}} </li>
+                                <li class="list-group-item">Nombre: {{e.nombre_visita}} </li>
+                                <li class="list-group-item">Apellido: {{e.apellido_visita}} </li>
                                 {{e.visita}}
                             </ul>
                         </div>
