--- a/templates/servicio/ListaRecibos.html
+++ b/templates/servicio/ListaRecibos.html
@@ -33,9 +33,9 @@
                     <div style="text-align: center;">
                         <ul class="list-group">
                             <li class="list-group-item" style="background-color: bisque; color:red;">{{e.servicio}}</li>
-                            <li class="list-group-item">Mes: <b>{{e.mes}}</b></li>
-                            <li class="list-group-item">Monto a pagar: <b>{{e.monto}}</b></li>
-                            <li class="list-group-item">Estado: <b>{{e.estado}}</b></li>
+                            <li class="list-group-item">Mes: {{e.mes}}</li>
+                            <li class="list-group-item">Monto a pagar: {{e.monto}}</li>
+                            <li class="list-group-item">Estado: {{e.estado}}</li>
 
                         </ul>
                         <a href="/servicio/lista_pdf2/{{e.id}}" class="btn btn-primary">Imprimir recibo</a>
