--- a/templates/visita/prueba.html
+++ b/templates/visita/prueba.html
@@ -23,8 +23,8 @@
 
             <ul class="list-group">
               <li class="list-group-item" style="background-color: bisque; color:red;"></li>
-              <li class="list-group-item">Fecha: <b>{{e.fecha_visita}}</b></li>
-              <li class="list-group-item">usuario: <b>{{e.usuario}}</b> </li>
+              <li class="list-group-item">Fecha: {{e.fecha_visita}}</li>
+              <li class="list-group-item">usuario: {{e.usuario}} </li>
               <form method="GET"> {% csrf_token %}
                 <a href="/visita/add_visitantes/{{e.id}}" class="btn btn-success">Registrar personas</a>
                 <a href="/visita/list_visitantes/{{e.id}}" class="btn btn-success">Detalles de visita</a>
