--- a/templates/administracion/panel.html
+++ b/templates/administracion/panel.html
@@ -15,7 +15,7 @@
 
     
     <h1>Bienvenido al panel de usuario</h1>
-    <p align="right">
+    <p style="align-items: right;">
              <button type="button" class="btn btn-info" ><a href="/" style="text-decoration: none; color:white;">Volver
             inicio</a></button>
     </p>
