--- a/templates/servicio/ListaServicios.html
+++ b/templates/servicio/ListaServicios.html
@@ -34,9 +34,9 @@
                     <div style="text-align: center;">
                         <ul class="list-group">
                             <li class="list-group-item" style="background-color: bisque; color:red;">{{e.servicio}}</li>
-                            <li class="list-group-item">Mes:   <b>{{e.mes}}</b></li>
-                            <li class="list-group-item">Monto a pagar: <b>{{e.monto}}</b></li>
-                            <li class="list-group-item">Estado: <b>{{e.monto}}</b></li>
+                            <li class="list-group-item">Mes:   {{e.mes}}</li>
+                            <li class="list-group-item">Monto a pagar: {{e.monto}}</li>
+                            <li class="list-group-item">Estado: {{e.monto}}</li>
                             
                         </ul>
                         <a href="/servicio/pasarella/{{e.id}}" class="btn btn-primary">Pagar este servicio</a>
