--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -14,7 +14,7 @@
 
  
         <h1>Acceder al sistema</h1>
-        <p align="right">
+        <p style="align-content: flex-start;">
             <button type="button" class="btn btn-info"><a href="/" style="text-decoration: none; color:white;">Volver
                     inicio</a></button>
         </p>
