--- a/templates/visita/add_visitantes.html
+++ b/templates/visita/add_visitantes.html
@@ -22,7 +22,7 @@
                 </li>
                 <form method="POST">{% csrf_token %}
 
-                        <h4 align="left">{{form.as_p}}</h4>
+                        <h4 style="align-items: flex-start;">{{form.as_p}}</h4>
                             </h4>                            
                     <button type="submit" class="btn btn-warning fw-bold">Añadir</button>
                 </form>
