--- a/templates/users/update.html
+++ b/templates/users/update.html
@@ -15,7 +15,7 @@
 
 
         <h1>Cambiar contraseña: "{{user}}</h1>
-        <p align="right">
+        <p style="align-items: flex-start;">
             <button type="button" class="btn btn-info"><a href="/" style="text-decoration: none; color:white;">Volver
                     inicio</a></button>
         </p>
@@ -27,7 +27,3 @@
 </div>
 </body>
 </html>
-
-<style>
- 
-</style>
