--- a/templates/visita/add_visita.html
+++ b/templates/visita/add_visita.html
@@ -20,7 +20,7 @@
                     <h2>Formulario registro de visita</h2>
                 </li>
                 <form method="POST">{% csrf_token %}
-                    <h4 align="left">{{form.as_p}}</h4>
+                    <h4 style="align-content: flex-start;">{{form.as_p}}</h4>
                     
                     <button type="submit" class="btn btn-warning fw-bold">Registrar </button>
                 </form>
